DCHECK when loading images that do not exist.

Enabled only in debug mode.
This works by swizzling [UIImage imageNamed:] and making sure that it returns
a non-nil UIImage*.

BUG=718850

Review-Url: https://codereview.chromium.org/2863983002
Cr-Commit-Position: refs/heads/master@{#470887}

Former-commit-id: b75611794c4ee0538c0f62aaf75abaa409d8963d